# find-colleague

./: .gitignore  README.md  SKILL.md  config.example.toml  pyproject.toml  sources.example.md
hooks/: pre-push
prompts/: extract.md
src/find_colleague/: __init__.py  cli.py  config.py  db.py  embed.py  ingest.py  period.py  positions.py  recall.py
tests/: test_period.py  test_worklog.py
